force-app/main/default/objects/Guest__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State_Province__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Washington, D.C</fullName>
            </value>
            <value>
                <fullName>Ottowa</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Ankara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>