force-app/main/default/objects/Guest__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WA:Washington</fullName>
            </value>
            <value>
                <fullName>ON | Ontario</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>