force-app/main/default/objects/Guest__c/fields/The_number_of_reservations__c.field-meta.xml
<CustomField>
    <fullName>The_number_of_reservations__c</fullName>
    <label>The number of reservations</label>
    <summaryForeignKey>Opp_Guest_Intermediate__c.Guest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>